# cabal-test-stderr

./: Main.hs  cabal-test-stderr.cabal
test/: TestMain.hs
