name:                cabal-test-stderr
version:             0.1.0.0
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
build-type:          Simple
cabal-version:       >=1.10

executable cabal-test-stderr
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
  main-is: Main.hs

test-suite tests
  default-language:    Haskell2010
  build-depends: base
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  hs-source-dirs: test
